Add getTaskDetail handler
